--- a/about-this-site/index.html
+++ b/about-this-site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="canonical" href="http://romanmgarcia.com/colophon"/>
+    <link rel="canonical" href="http://roman.nyc/colophon"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta http-equiv="refresh" content="0;url=/colophon"/>
   </head>
