--- a/writing/index.html
+++ b/writing/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="canonical" href="http://romanmgarcia.com/posts"/>
+    <link rel="canonical" href="http://roman.nyc/posts"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta http-equiv="refresh" content="0;url=/posts"/>
   </head>
